@@ -6,13 +6,19 @@ import java.util.List;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
+import my_app.dao.GoodsReceiptDao;
+import my_app.dao.GoodsReceiptDetailDao;
 import my_app.dao.SupplierDao;
 import my_app.model.Supplier;
+import my_app.model.GoodsReceipt;
+import my_app.model.GoodsReceiptDetail;
 
 public class SupplierBus implements GeneralConfig<Supplier> {
 
     private static final SupplierDao supplierDao = new SupplierDao();
-    public static ArrayList<Supplier> listSuppliers = new ArrayList<>();
+    private static final GoodsReceiptDetailDao receiptsDao = new GoodsReceiptDetailDao();
+    private static final GoodsReceiptDao receiptDao = new GoodsReceiptDao();
+    public ArrayList<Supplier> listSuppliers = new ArrayList<>();
     private final ObservableList<Supplier> suppliers;
 
     public SupplierBus() {
@@ -25,6 +31,10 @@ public class SupplierBus implements GeneralConfig<Supplier> {
 
     public List<Supplier> fetchAllFromDb() {
         return supplierDao.findAll();
+    }
+
+    public List<Supplier> getTheDB() {
+       return supplierDao.All();
     }
 
     public void replaceAll(List<Supplier> newSuppliers) {
@@ -43,7 +53,7 @@ public class SupplierBus implements GeneralConfig<Supplier> {
         if (source == null || source.isEmpty()) {
             return Collections.emptyList();
         }
-        if (name == null || name.isBlank()) {
+        if (name == null || name.trim().isEmpty()) {
             return new ArrayList<>(source);
         }
         String keyword = name.toLowerCase();
@@ -103,5 +113,42 @@ public class SupplierBus implements GeneralConfig<Supplier> {
         int index = supplierDao.delete(id);
         findAll();
         return index;
+    }
+    
+    public int hardDelete(int id) {
+    try {
+        List<GoodsReceipt> allReceipts = receiptDao.findAll();
+        List<GoodsReceiptDetail> allDetails = receiptsDao.findAll();
+
+        List<GoodsReceipt> supplierReceipts = new ArrayList<>();
+        for (GoodsReceipt r : allReceipts) {
+            if (r.getSupplierId() == id) {
+                supplierReceipts.add(r);
+            }
+        }
+
+        List<GoodsReceiptDetail> receiptDetails = new ArrayList<>();
+        for (GoodsReceiptDetail d : allDetails) {
+            for (GoodsReceipt r : supplierReceipts) {
+                if (d.getReceiptId() == r.getId()) {
+                    receiptDetails.add(d);
+                    break;
+                }
+            }
+        }
+
+        for (GoodsReceiptDetail d : receiptDetails) {
+            receiptsDao.delete(d.getId());
+        }
+
+        for (GoodsReceipt r : supplierReceipts) {
+            receiptDao.delete(r.getId());
+        }
+
+        return supplierDao.hardDelete(id);
+    } catch (Exception e) {
+        e.printStackTrace();
+        return 0;
+     }
     }
 }
